fix: use z-index on header

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -7,6 +7,7 @@
   align-items: center;
   width: 100%;
   padding: 0 0.5rem;
+  z-index: 100;
 
   /* TODO use background? */
   /* background: #fff; */
